ubiquity (1.5.17) UNRELEASED; urgency=low

  * Use the --automatic option when running ubiquity from the init script
    (thanks, Evan Dandrea).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 21 Sep 2007 20:32:52 +0100

ubiquity (1.5.16) gutsy; urgency=low

  [ Evan Dandrea ]
  * Updated kde_ui.py to reflect recent fixes to gtk_ui.py.
  * Small fix to return to the right page on return_to_partitioning.

  [ Colin Watson ]
  * Translate widgets from all glade files, not just the main one.
  * Purge ucf's state for /etc/papersize so that it will be recreated
    properly (LP: #128258).
  * Fix automatic-ubiquity option handling in init script.
  * Automatic update of included source packages: hw-detect 1.53ubuntu2,
    kboot-installer 0.0.1ubuntu4, localechooser 1.38ubuntu2,
    migration-assistant 0.5.0, partman-auto-loop 0ubuntu7, partman-base
    107ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 20 Sep 2007 22:59:23 +0100

ubiquity (1.5.15) gutsy; urgency=low

  [ Evan Dandrea ]
  * Fixed backup in the UI wrt the new page turning code.
  * Fix canceling from the intro page.
  * Fix hostname validation (LP: #137592).

  [ Colin Watson ]
  * Start ubiquity init script at 29; don't bother stopping it.
  * Update translations from Rosetta (LP: #132157).
  * Remove question mark from popularity-contest checkbox text
    (LP: #135140).
  * Adjust grub_enable text to have more usual capitalisation and spelling.
  * Internationalise partitioning and advanced dialogs. Remove
    popcon_checkbutton special case as its text now differs from that in
    popularity-contest.
  * Don't ignore 'make distclean' errors other than missing Makefiles.
  * Automatic update of included source packages: partman-auto-loop
    0ubuntu6, user-setup 1.14ubuntu2.

  [ Michael Haas ]
  * Allow VNC to be selected with foreign locales in mythbuntu
    interface. (LP: #136482)

  [ Mario Limonciello ]
  * Include a .desktop file for mythbuntu installation.